# assignment-snapshots

./: .env-template  .gitignore  .pre-commit-config.yaml  README.md  get_backups.py  requirements.txt
.github/: pull_request_template.md
.github/workflows/: black.yml  brakeman.yml  prettier.yml  pylint.yml  rake.yml  rubocop.yml  ruff.yml
data/public/: DELETEME
src/app/: README.md  main.py
src/backups/: .env-template  .gitignore  README.md  backup_config.json  c88c_config.json  cs61a_config.json  data_c88c_fa25.json  data_c88c_sp25.json  db.py  deidentify.py  email_hash_lookup.py  emails.py  main.py  models.py  pyproject.toml  query.py  request.py  schema.dbml  storage.py  test_config.json
src/backups/configs/: README.md
src/backups/configs/cs61a/: fa23.json  fa24.json  fa25.json  sp24.json  sp25.json  su24.json  su25.json
src/backups/configs/datac88c/: fa23.json  fa24.json  fa25.json  sp24.json  sp25.json  su24.json  su25.json
src/backups/configs/dev/: backup_config.json  dev2.json  dev3.json
src/backups/configs/formative/: c88c_config.json
src/backups/scripts/: README.md  email_hash_lookup.py  hashes.txt  separate_rosters.py
src/notebooks/: .gitignore  README.md  blooms_taxonomy_coding.csv  cs_61a_fa25_ants_acadint.ipynb  cs_61a_fa25_ants_study.ipynb  data_c88c_fa25_ants_eda.ipynb  data_c88c_fa25_ants_study.ipynb  data_c88c_sp25_ants_eda.ipynb  pyproject.toml  question_types.csv  technical_report.ipynb
src/snapshots-app/: Gemfile  README.md  package-lock.json  package.json
src/test-react-on-rails/: Dockerfile  Gemfile  README.md  package.json  (+1 more)
(+263 files in other folders)
